<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Docente">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/fondo2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textInformDocente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/bad_script"
            android:text="@string/informaciondocente"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="38dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="50dp"
            android:text="Nombre del Docente"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:hint="@string/nombre"
            android:textColor="@color/black"
            android:textColorHint="#615C5C" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="Facultad donde trabaja"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:hint="@string/Facultad"
            android:textColor="@color/black"
            android:textColorHint="#615C5C" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="Area en la que se desempeña"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:hint="@string/Area"
            android:textColor="@color/black"
            android:textColorHint="#615C5C" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="Pasatiempo favorito"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:hint="@string/Hobbies"
            android:textColor="@color/black"
            android:textColorHint="#615C5C" />



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>