<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Busqueda3">

    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="731dp"
        android:background="@drawable/fondo2"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="140dp"
            android:fontFamily="@font/bad_script"
            android:text="Buscador de Eventos"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:fontFamily="serif"
            android:text="@string/mensajeDigitar"
            android:textAlignment="center"
            android:textColor="#0FA2E4"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/editTextcodigo3"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginLeft="190px"
            android:layout_marginTop="70px"
            android:layout_marginRight="150px"
            android:background="@drawable/style2"
            android:ems="10"
            android:hint="@string/busqueda"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHighlight="#5C5959"
            android:textColorHint="#636060"
            android:textSize="24dp" />

        <Button
            android:id="@+id/btnsearch1"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="240px"
            android:layout_marginRight="400dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:text="@string/bottonbusqueda"
            android:textColor="#FFFFFF"
            android:textColorLink="#2196F3"
            android:textSize="20dp" />



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>