<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/purple_700"
    android:visibility="visible"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="731dp"
        android:background="@drawable/fondo2"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="350px"
            app:srcCompat="@drawable/icons3" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="170px"
            android:layout_marginTop="80px"
            android:layout_marginRight="170px"
            android:background="@drawable/style2"
            android:ems="10"
            android:hint="@string/Username"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="170px"
            android:layout_marginTop="40px"
            android:layout_marginRight="170px"
            android:background="@drawable/style2"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btnsearch1"
            android:layout_width="103dp"
            android:layout_height="50dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="400dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:text="@string/ButtonLogin"
            android:textColor="#FFFFFF"
            android:textColorLink="#CFC8C8"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150px"
            android:fontFamily="@font/bad_script"
            android:text=" You do not have an account"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>